--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -32,3 +32,216 @@
   border: 1px solid #8eabfc;
   box-shadow: 0px 0px 2px 2px rgba(0, 38, 144, 0.1);
 }
+
+//Card CSS 
+.card{
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 50px;
+
+  .image{
+      width: 100%;
+      height: 400px;
+      overflow: hidden;
+      position: relative;
+      &:hover{
+          .secondImg{
+              z-index: 2;
+          }
+      }
+
+      img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          position: absolute;
+      }
+      .mainImg{
+          z-index: 1;
+      }
+      span{
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          background-color: white;
+          color: teal;
+          padding: 3px 5px;
+          z-index: 3;
+          font-weight: 500;
+          font-size: 12px;
+      }
+  }
+  h2{
+      font-size: 16px;
+      font-weight: 400;
+  }
+  .prices{
+      display: flex;
+      gap: 20px;
+      h3{
+          font-size: 18px;
+          font-weight: 500;
+          &:first-child{
+              color: gray;
+              text-decoration: line-through;
+          }
+      }
+  }
+}
+
+//Cart CSS
+.cart{
+  position: absolute;
+  right: 20px;
+  top: 80px;
+  z-index: 999;
+  background-color: white;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+  h1{
+      margin-bottom: 30px;
+      color: gray;
+      font-weight: 400;
+      font-size: 24px;
+  }
+  .item{
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 30px;
+      img{
+          width: 80px;
+          height: 100px;
+          object-fit: cover;
+      }
+      .details{
+          h1{
+              font-size: 18px;
+              font-weight: 500;
+          }
+          p{
+              color: gray;
+              margin-bottom: 10px;
+              font-size: 14px;
+          }
+          .price{
+              color: #2879fe;
+          }
+      }
+      .delete{
+          color: red;
+          font-size: 30px;
+          cursor: pointer;
+      }
+  }
+  .total{
+      display: flex;
+      justify-content: space-between;
+      font-weight: 500;
+      font-size: 18px;
+      margin-bottom: 20px;
+  }
+  button{
+      width: 250px;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      cursor: pointer;
+      border: none;
+      background-color: #2879fe;
+      color: white;
+      font-weight: 500;
+      margin-bottom: 20px;
+      
+  }
+  .reset{
+      color: red;
+      font-size: 12px;
+      cursor: pointer;
+  }
+}
+
+//Categories CSS
+.categories{
+  display: flex;
+  height: 80vh;
+  gap: 10px;
+  margin: 10px;
+
+  .col{
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+  }
+  .col-l{
+      flex: 2;
+  }
+  .row{
+      flex: 1;
+      display: flex;
+      gap: 10px;
+      position: relative;
+      overflow: hidden;
+      button{
+          position: absolute;
+          min-width: 100px;
+          width: fit-content;
+          height: 50px;
+          padding: 10px;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+          cursor: pointer;
+          border: none;
+          background-color: white;
+          text-transform: uppercase;
+          font-weight: 500;
+      }
+
+      img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+  }
+}
+
+//Contact CSS
+.contact{
+  background-color: #2879fe;
+  color: white;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  .wrapper{
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      input{
+          padding: 10px;
+          border: none;
+          border-radius: 5px 0 0 5px;
+      }
+      button{
+          padding: 10px;
+          color: white;
+          background: #333;
+          border-radius: 0 5px 5px 0;
+          border: none;
+      }
+      .icons{
+          display: flex;
+          gap: 10px;
+      }
+  }
+}
