--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -66,12 +66,15 @@
   height: 100%;
   object-fit: cover;
   transition: opacity 0.3s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .mainImg {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 140px;
+  left: 10px;
   z-index: 1;
 }
 
@@ -570,4 +573,164 @@
       object-fit: cover;
       margin-bottom: 50px;
   }
+}
+
+//Items
+/* General Styles */
+.product {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.images {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  left: 15px;
+  position: absolute;
+}
+
+.images img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.images img:hover {
+  transform: scale(1.1);
+}
+
+.images img.active {
+  border: 2px solid #000;
+  transform: scale(1.1);
+}
+
+.mainImg img {
+  width: 450px;
+  height: 450px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.right {
+  flex: 1.5;
+  padding-left: 20px;
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.price {
+  font-size: 22px;
+  color: #d9534f;
+  margin-top: 10px;
+}
+
+p {
+  margin: 20px 0;
+  font-size: 16px;
+  color: #555;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.quantity-btn {
+  background-color: #f7f7f7;
+  border: 1px solid #ccc;
+  padding: 5px 15px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.quantity-btn:hover {
+  background-color: #e0e0e0;
+}
+
+span {
+  font-size: 18px;
+  margin: 0 10px;
+}
+
+.add-to-cart {
+  background-color: #d9534f;
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  margin-top: 20px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.add-to-cart:hover {
+  background-color: #c9302c;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.item:hover {
+  color: #d9534f;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #555;
+}
+
+hr {
+  margin: 15px 0;
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+.tabs span {
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+  color: #555;
+  margin-right: 20px;
+}
+
+.tabs span:hover {
+  color: #d9534f;
 }
